:pencil2: fix sorting layer, read secret key in yaml, rename api url
