# server/api/register.go
@@ -17,11 +17,12 @@ type ServiceConfig struct {
 	Smtp          mailserver.MailServer
 	TokenLifeTime time.Duration
 	MRExpiryTime  int64
+	SecretKey     string
 }
 
 func NewHandleService(s ServiceConfig) *services.Services {
 	return services.RegisterService(
-		a.NewAuthorization(s.Repo, s.TokenLifeTime, roles.HasPermission, s.Smtp),
+		a.NewAuthorization(s.Repo, s.TokenLifeTime, roles.HasPermission, s.Smtp, s.SecretKey),
 	)
 }
 
@@ -32,7 +33,7 @@ func RegisterAPI(api *operations.DataFlowSyncAPI, serviceConfig ServiceConfig) {
 	api.APIKeyAuth = s.Account.Auth
 	api.AccountLoginHandler = account.LoginHandlerFunc(s.Account.Login)
 	api.AccountLogoutHandler = account.LogoutHandlerFunc(s.Account.Logout)
-	api.AccountSignupHandler = account.SignupHandlerFunc(s.Account.SignUp)
+	api.AccountSignUpHandler = account.SignUpHandlerFunc(s.Account.SignUp)
 	api.AccountVerifyAccountHandler = account.VerifyAccountHandlerFunc(s.Account.VerifyAccount)
 	api.AccountSendMailHandler = account.SendMailHandlerFunc(s.Account.SendMail)
 
