# server/internal/repositories/repo_list.go
@@ -23,10 +23,10 @@ type AccountServices interface {
 	GetAccount(context.Context, string) (models.Account, error)
 	SignIn(context.Context, SignInRequest) (SignInReply, error)
 	SignOut(context.Context, string) error
-	SignUp(context.Context, SignUpAccountRequest) (SignInReply, error)
-	VerifyAccount(context.Context, VerifyAccountRequest) (VerifyAccountReply, error)
+	SignUp(context.Context, SignUpAccountRequest) error
 	UpdateToUserRole(context.Context, string) (CommonUpdateAndDeleteReply, error)
 	Authorization(context.Context, string) (*models.JwtCustomClaims, error)
 	AddOTP(context.Context, string, string) error
 	DelOTP(context.Context, string) error
+	GetOTPByEmail(context.Context, string) (string, error)
 }
